--- a/elasticshop/elasticshop-productservice/pom.xml
+++ b/elasticshop/elasticshop-productservice/pom.xml
@@ -3,31 +3,24 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
+    <groupId>org.elasticshop</groupId>
     <artifactId>elasticshop-project</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <groupId>org.elasticshop</groupId>
   </parent>
   <groupId>org.elasticshop</groupId>
-  <artifactId>elasticshop-ap</artifactId>
+  <artifactId>elasticshop-productservice</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>elasticshop-ap</name>
+  <name>elasticshop-productservice</name>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <elasticshop-webserver-version>0.0.1-SNAPSHOT</elasticshop-webserver-version>
-  	<elasticshop-bizmodel-version>0.0.1-SNAPSHOT</elasticshop-bizmodel-version>
-  	
   </properties>
   <dependencies>
-     <dependency>
-      <groupId>org.elasticshop</groupId>
-      <artifactId>elasticshop-bizmodel</artifactId>
-      <version>${elasticshop-bizmodel-version}</version>
-    </dependency>
     <dependency>
       <groupId>org.elasticshop</groupId>
       <artifactId>elasticshop-bizmodel</artifactId>
-      <version>${elasticshop-webserver-version}</version>
+      <version>0.0.1-SNAPSHOT</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
