--- a/elasticshop/pom.xml
+++ b/elasticshop/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.elasticshop</groupId>
@@ -26,5 +26,11 @@
   	
   	<module>elasticshop-mpp</module>
   	<module>elasticshop-ap</module>
+  	<module>elasticshop-common</module>
+  	<module>elasticshop-dataservice</module>
+    <module>elasticshop-bizservice</module>
+    <module>elasticshop-productservice</module>
+    <module>elasticshop-bizmodel</module>
+    <module>elasticshop-webserver</module>
   </modules>
 </project>
